...
                                        <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                        <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="120" id="Btd-xW-kjf"/>
                                            <constraint firstAttribute="width" constant="120" id="V7e-Tf-k3H"/>
                                        </constraints>
                                        <state key="normal" title="Peripheral">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <segue destination="4gh-Yu-1zU" kind="presentation" identifier="bePeripheral" id="hLP-wM-Xh3"/>
                                        </connections>
                                    </button>
...
                                        <rect key="frame" x="0.0" y="170" width="120" height="120"/>
                                        <color key="backgroundColor" red="0.98431372549019602" green="0.27843137254901962" blue="0.27843137254901962" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="120" id="c7G-x3-VrO"/>
                                            <constraint firstAttribute="width" constant="120" id="kio-ge-d5d"/>
                                        </constraints>
                                        <state key="normal" title="Central">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <segue destination="0VK-Mu-y9S" kind="modal" identifier="beCentral" id="Zb2-tc-ZA5"/>
                                        </connections>
                                    </button>
...
                                <rect key="frame" x="260" y="490" width="80" height="80"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="3dI-Ce-7Id"/>
                                    <constraint firstAttribute="width" constant="80" id="hmM-Tl-RYg"/>
                                </constraints>
                                <state key="normal" title="Ok">
                                    <color key="titleColor" red="0.98431372549999996" green="0.2784313725" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="startToControl:" destination="0VK-Mu-y9S" eventType="touchUpInside" id="l1o-kU-XEO"/>
                                </connections>
                            </button>
...
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Fp-6c-vRe">
                                <rect key="frame" x="20" y="550" width="61" height="30"/>
                                <state key="normal" title="Cancelar">
                                    <color key="titleColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="backToSelect:" destination="0VK-Mu-y9S" eventType="touchUpInside" id="Pzz-g6-hDo"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="260" y="490" width="80" height="80"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="dZP-Ra-m7A"/>
                                    <constraint firstAttribute="width" constant="80" id="nSk-60-OAC"/>
                                </constraints>
                                <state key="normal" title="Regresar">
                                    <color key="titleColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="backToSelect:" destination="4gh-Yu-1zU" eventType="touchUpInside" id="C4c-fx-n2M"/>
                                    <action selector="backToSelect:" destination="0VK-Mu-y9S" eventType="touchUpInside" id="p86-hM-Zek"/>
                                </connections>
...
